# Agentic-Text2SQL

./: .gitignore  .vercelignore  DATABASE_GUIDE.md  PROJECT_CHECKLIST.md  README.md  Sample_Database_Implementation.md  Updated Product Requirements Document.markdown  cli.py  cli_test.py  conversations.db  debug_sqlite.py  file_test.py  generate_db.py  generate_sample_db.py  inspect_db.py  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  run_tests.py  simple_test.py  sqlite_test_results.txt  temp.py  test_api.py  test_api_fix.py  test_dspy_agents.py  test_explanation_agent_pydantic.py  test_intent_agent_dspy.py  test_intent_agent_pydantic.py  test_query.py  test_sqlite.py  vercel.json
.vercel/: project.json
app/: __init__.py
app/agents/: __init__.py  base_explanation_agent.py  base_intent_agent.py  base_sql_agent.py  dspy_explanation_agent.py  dspy_intent_agent.py  dspy_sql_agent.py  explanation_agent.py  intent_agent.py  pydantic_explanation_agent.py  pydantic_intent_agent.py  pydantic_sql_agent.py  sql_agent.py
app/api/: __init__.py  api.py
app/core/: __init__.py  config.py  database.py  settings.py
app/frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
app/schemas/: __init__.py  database.py  response.py  sql.py  user_query.py
app/static/: index.html
app/tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_cli.py  test_db_integrations.py  test_db_utils.py  test_schemas.py
app/utils/: __init__.py  conversation_db.py  db_optimize.py  db_utils.py  sample_db.py  sample_mssql_db.py  (+3 more)
frontend/: .vercelignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json  vite.config.ts
(+71 files in other folders)
