[project]
name = "agentic-text2sql"
version = "0.1.0"
description = "Agentic Text-to-SQL System using PydanticAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=0.1.2",
    "sqlalchemy>=2.0.0",
    "dspy-ai>=2.3.2",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pymysql>=1.1.0",
    "pyodbc>=5.0.1",
    "cx-oracle>=8.3.0",
    "pytest-cov>=6.1.1",
    "click>=8.1.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
text2sql = "cli:cli"
