[project]
name = "agentic_text2sql"
version = "0.1.0"
description = "A Text-to-SQL system using PydanticAI agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Akshay Sisodia", email = "akshaysisodia.studies@gmail.com"}
]
dependencies = [
    "pydantic-ai>=0.1.2",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    # Database drivers
    "psycopg2-binary>=2.9.9",  # PostgreSQL
    "pymysql>=1.1.0",  # MySQL
    "pyodbc>=5.0.1",  # MSSQL
    "cx_oracle>=8.3.0",  # Oracle
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
text2sql = "cli:cli"
